# jx-cpp-demo-new

./: .clang-format  .clang-tidy  .dockerignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  jenkins-x.yml  skaffold.yaml  suppressions.cppcheck
charts/jx-cpp-demo/: Chart.yaml  Makefile  values.yaml
charts/preview/: Makefile  requirements.yaml
src/: CMakeLists.txt  demo.h
test/: CMakeLists.txt  demoTest.cpp
